dark mode and bug fixes

--- a/catalog/view/theme/default/bulma/scss/components/dropdown.scss
+++ b/catalog/view/theme/default/bulma/scss/components/dropdown.scss
@@ -66,6 +66,7 @@ $dropdown-divider-background-color: $border-light !default;
   box-shadow: $dropdown-content-shadow;
   padding-bottom: $dropdown-content-padding-bottom;
   padding-top: $dropdown-content-padding-top;
+  overflow: hidden;
 }
 
 .dropdown-item {
