--- a/catalog/view/theme/default/template/checkout/shipping_method.twig
+++ b/catalog/view/theme/default/template/checkout/shipping_method.twig
@@ -13,7 +13,7 @@
         <div class="field">
           <label class="radio">
             <input type="radio" name="shipping_method" value="{{ quote.code }}" />
-            {{ quote.title }} <span class="tag">{{ quote.text }}</span>
+            {{ quote.title }} <span class="tag is-light">{{ quote.text }}</span>
           </label>
         </div>
         {% endfor %}
