--- a/admin/view/template/setting/setting.twig
+++ b/admin/view/template/setting/setting.twig
@@ -93,22 +93,41 @@
                 <label class="col-sm-2 control-label" for="input-theme">{{ entry_theme }}</label>
                 <div class="col-sm-10">
                   <select name="config_theme" id="input-theme" class="form-control">
-
                     {% for theme in themes %}
                     {% if theme.value == config_theme %}
-
                     <option value="{{ theme.value }}" selected="selected">{{ theme.text }}</option>
-
                     {% else %}
-
                     <option value="{{ theme.value }}">{{ theme.text }}</option>
-
                     {% endif %}
                     {% endfor %}
-
                   </select>
-                  <br />
-                  <img src="" alt="" id="theme" class="img-thumbnail" /></div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_default_mode }}">{{ entry_default_mode }}</span></label>
+                <div class="col-sm-10">
+                  <label class="radio-inline">
+                    <input type="radio" name="config_default_mode" value="light" {{ config_default_mode == 'light' ? 'checked' : '' }}>
+                    {{ text_light }}
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="config_default_mode" value="dark" {{ config_default_mode == 'dark' ? 'checked' : '' }}>
+                    {{ text_dark }}
+                  </label>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_toggle_mode }}">{{ entry_toggle_mode }}</span></label>
+                <div class="col-sm-10">
+                  <label class="radio-inline">
+                    <input type="radio" name="config_toggle_mode" value="1" {{ config_toggle_mode ? 'checked' : '' }}>
+                    {{ text_yes }}
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="config_toggle_mode" value="0" {{ not config_toggle_mode ? 'checked' : '' }}>
+                    {{ text_no }}
+                  </label>
+                </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label" for="input-layout">{{ entry_layout }}</label>
