--- a/admin/view/template/setting/store_form.twig
+++ b/admin/view/template/setting/store_form.twig
@@ -69,7 +69,7 @@
                 <label class="col-sm-2 control-label" for="input-meta-title">{{ entry_title_seo_phrase }}</label>
                 <div class="col-sm-10">
                   {% for language in languages %}
-                  <div class="input-group">
+                  <div class="input-group" style="margin-bottom: 10px;">
                     <div class="input-group-addon">
                       <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" />
                     </div>
@@ -82,7 +82,7 @@
                 <label class="col-sm-2 control-label" for="input-meta-title">{{ entry_heading_seo_phrase }}</label>
                 <div class="col-sm-10">
                   {% for language in languages %}
-                  <div class="input-group">
+                  <div class="input-group" style="margin-bottom: 10px;">
                     <div class="input-group-addon">
                       <img src="language/{{ language.code }}/{{ language.code }}.png" title="{{ language.name }}" />
                     </div>
@@ -115,8 +115,33 @@
                     {% endif %}
                     {% endfor %}
                   </select>
-                  <br />
-                  <img src="" alt="" id="theme" class="img-thumbnail" /></div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_default_mode }}">{{ entry_default_mode }}</span></label>
+                <div class="col-sm-10">
+                  <label class="radio-inline">
+                    <input type="radio" name="config_default_mode" value="light" {{ config_default_mode == 'light' ? 'checked' : '' }}>
+                    {{ text_light }}
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="config_default_mode" value="dark" {{ config_default_mode == 'dark' ? 'checked' : '' }}>
+                    {{ text_dark }}
+                  </label>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_toggle_mode }}">{{ entry_toggle_mode }}</span></label>
+                <div class="col-sm-10">
+                  <label class="radio-inline">
+                    <input type="radio" name="config_toggle_mode" value="1" {{ config_toggle_mode ? 'checked' : '' }}>
+                    {{ text_yes }}
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="config_toggle_mode" value="0" {{ not config_toggle_mode ? 'checked' : '' }}>
+                    {{ text_no }}
+                  </label>
+                </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label" for="input-layout">{{ entry_layout }}</label>
