--- a/catalog/view/theme/default/template/checkout/cart.twig
+++ b/catalog/view/theme/default/template/checkout/cart.twig
@@ -95,7 +95,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="block mb-0 has-text-right">
+                            <div class="block mb-0 has-text-right is-size-7">
                               <span class="per-one">{{ product.price }}</span> / <span class="has-text-weight-bold">{{ product.total }}</span>
                             </div>
                             {% if product.reward %}
