--- a/admin/view/template/catalog/product_form.twig
+++ b/admin/view/template/catalog/product_form.twig
@@ -211,7 +211,19 @@
               <div class="form-group">
                 <label class="col-sm-2 control-label" for="input-quantity">{{ entry_quantity }}</label>
                 <div class="col-sm-10">
-                  <input type="text" name="quantity" value="{{ quantity }}" placeholder="{{ entry_quantity }}" id="input-quantity" class="form-control"/>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <input type="text" name="quantity" value="{{ quantity }}" placeholder="{{ entry_quantity }}" id="input-quantity" class="form-control" step="0.0001"/>
+                    </div>
+                    <div class="col-sm-6">
+                      <select name="quantity_class_id" class="form-control">
+                        <option value="0">{{ text_default }}</option>
+                        {% for quantity_class in quantity_classes %}
+                          <option value="{{ quantity_class.quantity_class_id }}"{% if quantity_class.quantity_class_id == quantity_class_id %} selected="selected"{% endif %}>{{ quantity_class.title }}</option>
+                        {% endfor %}
+                      </select>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="form-group">
