--- a/admin/view/template/sale/order_invoice.twig
+++ b/admin/view/template/sale/order_invoice.twig
@@ -83,7 +83,7 @@
             {% endfor %}</td>
           <td>{{ product.model }}</td>
           <td class="text-right">{{ product.quantity }}</td>
-          <td class="text-right">{{ product.price }}</td>
+          <td class="text-right">{{ product.price }}{% if product.quantity_unit %}<small class="has-text-grey"> / {{ product.quantity_unit }}</small>{% endif %}</td>
           <td class="text-right">{{ product.total }}</td>
         </tr>
         {% endfor %}
