--- a/catalog/view/theme/default/template/extension/module/special.twig
+++ b/catalog/view/theme/default/template/extension/module/special.twig
@@ -14,7 +14,7 @@
               {% if product.stickers %}
               <span class="stickers is-block mb-0">
               {% for sticker in product.stickers %}
-              <span class="is-block mb-1">
+              <span class="is-block">
                 <span class="{{ sticker.class }}">{{ sticker.content|html_entity_decode }}</span>
               </span>                    
               {% endfor %}
